# cangjie_compiler

./: README.OpenSource  build.py
.gitcode/: CODEOWNERS
cmake/: linux_toolchain.cmake
src/AST/: Clone.cpp  Create.cpp  Node.cpp  PrintNode.cpp  Utils.cpp
src/Basic/: SourceManager.cpp  Utils.cpp
src/CHIR/: CHIR.cpp  CHIRChecker.cpp  CHIRContext.cpp  Value.cpp
src/CodeGen/: CGModule.cpp  EmitFunctionIR.cpp  EraseUselessIRs.cpp  IRBuilder.cpp
src/Frontend/: CompileStrategy.cpp  CompilerInstance.cpp
src/Lex/: Lexer.cpp  LexerImpl.h
src/Macro/: MacroCallResolve.cpp  MacroExpansion.cpp  TestEntryConstructor.cpp
src/Mangle/: BaseMangler.cpp
src/Modules/: CjoManager.cpp  CjoManagerImpl.h  DependencyGraph.cpp  ImportManager.cpp  ModulesDiag.cpp
src/Option/: Option.cpp  OptionAction.cpp
src/Parse/: ASTHasher.cpp  MPParserImpl.h  ParseCJMPDecl.cpp  ParseDecl.cpp  ParseImports.cpp  ParseModifiers.cpp  Parser.cpp  ParserModifierRules.cpp
src/Sema/: CheckFunctionLinkage.cpp  CheckUnusedImportImpl.cpp  LookUpImpl.cpp  PluginCheck.cpp  PreCheck.cpp  TypeCheckCall.cpp  TypeCheckClassLike.cpp  TypeCheckDecl.cpp  TypeCheckExtend.cpp  TypeCheckPattern.cpp  TypeCheckReference.cpp  TypeCheckUtil.cpp  TypeChecker.cpp  TypeCheckerImpl.h  TypeManager.cpp  Utils.cpp
src/Utils/: FileUtil.cpp  UnicodeNFC.cpp
unittests/Modules/: CMakeLists.txt  ImportIncrTest.cpp  PackageTest.cpp
unittests/Modules/CangjieFiles/: coremock.cj
unittests/Modules/CangjieFiles/TypeAliasRefExport/: typealiasRef.cj  typealiases.cj
unittests/Parse/: CMakeLists.txt  ParseIncrTest.cpp  (+1 more)
(+87 files in other folders)
